[gd_scene load_steps=2 format=3 uid="uid://cbi3o03t2l8cb"]

[ext_resource type="Script" path="res://addons/godot_vn/vn_editor/decision_node.gd" id="1_2sjsj"]

[node name="DecisionNode" type="GraphNode"]
offset_right = 211.0
offset_bottom = 161.0
mouse_filter = 1
title = "Decision"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1_2sjsj")
node_type = 5

[node name="NodeIdContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="NodeIdContainer"]
layout_mode = 2
text = "ID:"

[node name="NodeId" type="LineEdit" parent="NodeIdContainer"]
layout_mode = 2
focus_mode = 0
text = "DecisionNode"
editable = false
expand_to_text_length = true

[node name="AddTimer" type="Timer" parent="NodeIdContainer"]
wait_time = 1.25
one_shot = true

[node name="DecisionNotesLabel" type="Label" parent="."]
layout_mode = 2
text = "Decision Notes:"

[node name="DecisionNotes" type="TextEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "notes here..."
scroll_fit_content_height = true
caret_blink = true

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Decision Paths: "
tab_stops = PackedFloat32Array(0)

[connection signal="timeout" from="NodeIdContainer/AddTimer" to="." method="_on_add_timer_timeout"]
